{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 12,
  "lineage": "f587310b-3603-13e8-f641-6d4681bff151",
  "resources": [
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:internet-gateway/igw-0c57d94d9d83f6940",
            "id": "igw-0c57d94d9d83f6940",
            "owner_id": "272459341377",
            "tags": {
              "Name": "dev_vpc_pub_igw",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_vpc_pub_igw",
              "env": "dev"
            },
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:route-table/rtb-0df55df92f991f824",
            "id": "rtb-0df55df92f991f824",
            "owner_id": "272459341377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c57d94d9d83f6940",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_vpc_pub_rt",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_vpc_pub_rt",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_asoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089d2cb25e3015cb6",
            "route_table_id": "rtb-0df55df92f991f824",
            "subnet_id": "subnet-01f0bd941db6ad667"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014384d1ba7e3a33a",
            "route_table_id": "rtb-0df55df92f991f824",
            "subnet_id": "subnet-0907ddf3fab85c6c2"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-0be8be511c9374f5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8be511c9374f5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pri_snet1_ap-south-1a",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_pri_snet1_ap-south-1a",
              "env": "dev"
            },
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-07eb53382e3ab8aec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eb53382e3ab8aec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pri_snet2_ap-south-1b",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_pri_snet2_ap-south-1b",
              "env": "dev"
            },
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-01f0bd941db6ad667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f0bd941db6ad667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_snet1_ap-south-1a",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_pub_snet1_ap-south-1a",
              "env": "dev"
            },
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-0907ddf3fab85c6c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0907ddf3fab85c6c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_snet2_ap-south-1b",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_pub_snet2_ap-south-1b",
              "env": "dev"
            },
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:vpc/vpc-071e4a663b0e71880",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0aa971522b785fd3e",
            "default_route_table_id": "rtb-06a859f2ae8d96cc4",
            "default_security_group_id": "sg-0fdd594369f081c96",
            "dhcp_options_id": "dopt-e9fb4582",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-071e4a663b0e71880",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a859f2ae8d96cc4",
            "owner_id": "272459341377",
            "tags": {
              "Name": "dev_vpc",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev_vpc",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:security-group/sg-0186650521973c531",
            "description": "web-server",
            "egress": [],
            "id": "sg-0186650521973c531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http/s",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071e4a663b0e71880"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    }
  ]
}